WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269790
[WGSL] Fix small parser bugs
https://bugs.webkit.org/show_bug.cgi?id=269790
Summary
[WGSL] Fix small parser bugs
Tadeu Zagallo
Reported
2024-02-20 07:15:18 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-20 07:15:30 PST
<
rdar://problem/123311105
>
Tadeu Zagallo
Comment 2
2024-02-20 07:33:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24816
EWS
Comment 3
2024-02-21 08:12:21 PST
Committed
275099@main
(badede9886d3): <
https://commits.webkit.org/275099@main
> Reviewed commits have been landed. Closing PR #24816 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug