[WGSL] Fix small parser bugs https://bugs.webkit.org/show_bug.cgi?id=269790 rdar://123311105

Reviewed by Mike Wyrzykowski.

We were missing a check for a semicolon after const_assert and trailing commas
in attributes, which caused a few CTS test failures.

* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseConstAssert):
(WGSL::Parser<Lexer>::parseAttribute):

Canonical link: https://commits.webkit.org/275099@main